--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,33 +8,34 @@
         android:id="@+id/select_image"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        android:text="사진 선택"/>
+        android:text="사진 선택" />
 
     <Button
         android:id="@+id/upload_image"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        android:text="업로드"
         android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/select_image"
         android:layout_toRightOf="@+id/select_image"
-        android:layout_toEndOf="@+id/select_image" />
+        android:text="업로드" />
 
     <Button
         android:id="@+id/rotate_image"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        android:text="회전"
         android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/upload_image"
         android:layout_toRightOf="@+id/upload_image"
-        android:layout_toEndOf="@+id/upload_image" />
+        android:text="회전" />
 
     <TextView
         android:id="@+id/image_url"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:layout_below="@+id/select_image"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/select_image"
+        android:background="#5f41" />
 
     <ImageView
         android:id="@+id/image_file"
